@@ -6,7 +6,7 @@
 /*  D. Turner, R.Wilhelm, and W. Lemberg                                    */
 /*                                                                          */
 /*  ftlint: a simple font tester. This program tries to load all the        */
-/*          glyphs of a given font.                                         */
+/*          glyphs of a given font, render them, and calculate MD5.         */
 /*                                                                          */
 /*  NOTE:  This is just a test program that is used to show off and         */
 /*         debug the current engine.                                        */
@@ -14,20 +14,30 @@
 /****************************************************************************/
 
 #include <ft2build.h>
-#include FT_FREETYPE_H
+#include <freetype/freetype.h>
+#include <freetype/ftbitmap.h>
+
 
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
 
+#include "md5.h"
+
+#ifdef UNIX
+#include <unistd.h>
+#else
+#include "mlgetopt.h"
+#endif
+
 
 #define  xxTEST_PSNAMES
 
-
-  static FT_Error  error;
-
-  static FT_Library    library;
-  static FT_Face       face;
+  static FT_Error        error;
+  static FT_Library      library;
+  static FT_Face         face;
+  static FT_Render_Mode  render_mode = FT_RENDER_MODE_NORMAL;
+  static FT_Int32        load_flags  = FT_LOAD_DEFAULT;
 
   static unsigned int  num_glyphs;
   static int           ptsize;
@@ -41,8 +51,11 @@
     printf( "ftlint: simple font tester -- part of the FreeType project\n" );
     printf( "----------------------------------------------------------\n" );
     printf( "\n" );
-    printf( "Usage: %s ppem fontname[.ttf|.ttc] [fontname2..]\n", name );
+    printf( "Usage: %s [options] ppem fontname[.ttf|.ttc] [fontname2..]\n",
+            name );
     printf( "\n" );
+    printf( "  -f L   Use hex number L as load flags (see `FT_LOAD_XXX').\n" );
+    printf( "  -r N   Set render mode to N\n" );
 
     exit( 1 );
   }
@@ -55,6 +68,43 @@
     exit(1);
   }
 
+  static void
+  Checksum( FT_GlyphSlot glyph )
+  {
+      FT_Bitmap  bitmap;
+      FT_Error err;
+      FT_Bitmap_Init( &bitmap );
+
+
+      printf( "#%u ", glyph->glyph_index );
+
+      err = FT_Bitmap_Convert( library, &glyph->bitmap, &bitmap, 1 );
+      if ( !err )
+      {
+        MD5_CTX        ctx;
+        unsigned char  md5[16];
+        int            i;
+        int            rows  = (int)bitmap.rows;
+        int            pitch = bitmap.pitch;
+
+        MD5_Init( &ctx );
+        if ( bitmap.buffer )
+          MD5_Update( &ctx, bitmap.buffer,
+                      (unsigned long)rows * (unsigned long)pitch );
+        MD5_Final( md5, &ctx );
+
+        for ( i = 0; i < 16; i++ )
+        {
+          printf( "%02X", md5[i] );
+        }
+        printf( "\n" );
+      }
+      else
+        printf("Error generating checksums\n");
+
+      FT_Bitmap_Done( library, &bitmap );
+  }
+
 
   int
   main( int     argc,
@@ -65,6 +115,7 @@
     char          filename[1024];
     char*         execname;
     char*         fname;
+    int           opt;
 
 
     execname = argv[0];
@@ -72,22 +123,56 @@
     if ( argc < 3 )
       Usage( execname );
 
-    if ( sscanf( argv[1], "%d", &ptsize ) != 1 )
+    while ( ( opt =  getopt( argc, argv, "f:r:") ) != -1)
+    {
+
+      switch ( opt )
+      {
+
+      case 'f':
+        load_flags = strtol( optarg, NULL, 16 );
+        break;
+
+      case 'r':
+        {
+         int  rm = atoi( optarg );
+
+
+         if ( rm < 0 || rm >= FT_RENDER_MODE_MAX )
+            render_mode = FT_RENDER_MODE_NORMAL;
+          else
+            render_mode = (FT_Render_Mode)rm;
+        }
+        break;
+
+      default:
+        Usage( execname );
+        break;
+      }
+    }
+
+    argc -= optind;
+    argv += optind;
+
+
+    if( sscanf( argv[0], "%d", &ptsize) != 1)
       Usage( execname );
 
     error = FT_Init_FreeType( &library );
-    if (error) Panic( "Could not create library object" );
+    if ( error )
+      Panic( "Could not create library object" );
+
 
     /* Now check all files */
-    for ( file_index = 2; file_index < argc; file_index++ )
+    for ( file_index = 1; file_index < argc; file_index++ )
     {
       fname = argv[file_index];
 
       /* try to open the file with no extra extension first */
       error = FT_New_Face( library, fname, 0, &face );
-      if (!error)
+      if ( !error )
       {
-        printf( "%s: ", fname );
+        printf( "%s: \n", fname );
         goto Success;
       }
 
@@ -132,7 +217,7 @@
         else
           i--;
 
-      printf( "%s: ", fname );
+      printf( "%s: \n", fname );
 
       /* Load face */
       error = FT_New_Face( library, filename, 0, &face );
@@ -158,29 +243,33 @@
 #endif
 
       error = FT_Set_Char_Size( face, ptsize << 6, ptsize << 6, 72, 72 );
-      if (error) Panic( "Could not set character size" );
+      if ( error )
+        Panic( "Could not set character size" );
 
       Fail = 0;
       {
         for ( id = 0; id < num_glyphs; id++ )
         {
-          error = FT_Load_Glyph( face, id, FT_LOAD_DEFAULT );
-          if (error)
+          error = FT_Load_Glyph( face, id, load_flags );
+          if ( error )
           {
             if ( Fail < 10 )
               printf( "glyph %4u: 0x%04x\n" , id, error );
             Fail++;
+            continue;
           }
+
+          FT_Render_Glyph( face->glyph, render_mode );
+          Checksum( face->glyph );
         }
       }
 
       if ( Fail == 0 )
         printf( "OK.\n" );
+      else if ( Fail == 1 )
+        printf( "1 fail.\n" );
       else
-        if ( Fail == 1 )
-          printf( "1 fail.\n" );
-        else
-          printf( "%d fails.\n", Fail );
+        printf( "%d fails.\n", Fail );
 
       FT_Done_Face( face );
     }
